added base styles and page structure

--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 			type="image/png"
 			href="https://www.google.com/s2/favicons?domain=jacinto.design"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-		/>
+
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<!-- Title -->
+		<h1>Unsplash API - Infinity Scroll</h1>
+		<!-- Loader -->
+		<div class="loader" id="loader" hidden>
+			<img src="loader-ring-dbz.svg" alt="Loading" />
+		</div>
+		<!-- Image Container -->
+		<div class="image-container" id="image-container">
+			<img
+				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+				alt=""
+			/>
+			<img
+				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+				alt=""
+			/>
+			<img
+				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
+				alt=""
+			/>
+		</div>
 		<!-- Script -->
 		<script src="script.js"></script>
 	</body>
