--- a/index.html
+++ b/index.html
@@ -21,20 +21,7 @@
 			<img src="loader-ring-dbz.svg" alt="Loading" />
 		</div>
 		<!-- Image Container -->
-		<div class="image-container" id="image-container">
-			<img
-				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-				alt=""
-			/>
-			<img
-				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-				alt=""
-			/>
-			<img
-				src="https://images.unsplash.com/photo-1670854749821-70ae4b66edef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80"
-				alt=""
-			/>
-		</div>
+		<div class="image-container" id="image-container"></div>
 		<!-- Script -->
 		<script src="script.js"></script>
 	</body>
